fix slide 1 background broken css rule

--- a/extenglish/style.css
+++ b/extenglish/style.css
@@ -91,10 +91,10 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 0;
+  z-index: 1;
 }
 
-
+#slide-1 {
   background: url('img/slide1-bg.jpg') center/cover no-repeat;
 }
 
@@ -108,7 +108,7 @@ body {
 
 #slide-1 .s1-content,
 #slide-1 .bg-deco {
-  z-index: 1;
+  z-index: 2;
 }
 
 .s1-content {
